--- a/src/app/artist-entry/artist-entry.component.html
+++ b/src/app/artist-entry/artist-entry.component.html
@@ -35,7 +35,7 @@
 </mat-slide-toggle>
 </div>
 
-<div class="notifybox">
+<div id="notifybox">
   Allow Notification
   <div> No/Yes</div>
   <mat-slide-toggle color="primary">
