--- a/src/app/artist-entry/artist-entry.component.html
+++ b/src/app/artist-entry/artist-entry.component.html
@@ -66,7 +66,7 @@
 </div>
 
 <div class="submitbox">
-  <button type="submit"
+  <button class="btn" type="submit"
    mat-dialog-close mat-button>
    Submit
   </button>
