--- a/src/app/tracklist-template/tracklist-template.component.html
+++ b/src/app/tracklist-template/tracklist-template.component.html
@@ -4,7 +4,7 @@
         1) playlist image 2) artist name 3) playlist name -->
     <div class="title">
         <figure class="hover-img">
-            <img class="playlist-image" src="https://i.scdn.co/image/ab67616d0000b27356ac7b86e090f307e218e9c8">
+            <img class="playlist-image" src="">
             <figcaption>
               <h3>EDIT <br/>IMAGE</h3>
             </figcaption>
@@ -19,7 +19,7 @@
       
     </div>
     <div class="embed">
-        <iframe style="border-radius:12px;" src="https://open.spotify.com/embed/album/2fYhqwDWXjbpjaIJPEfKFw?utm_source=generator" width="250" height="80" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+       
     </div>
     <div class="button-container">
         <button mat-icon-button color="primary" aria-label="add button for input" (click)="openArtistEntry()">
