--- a/src/app/popuplink/popuplink.component.html
+++ b/src/app/popuplink/popuplink.component.html
@@ -1,7 +1,7 @@
 <div class="linkpage">
     <div class="containers">
         <img class="image" src="https://www.freepnglogos.com/uploads/spotify-logo-png/spotify-download-logo-30.png">
-        <a style="text-decoration:none; color:black" href="https://open.spotify.com/album/7aQPZJolEV6D1oikzZyW49?si=2k5KxRsxQxeT9ESQ2AWWOw">
+        <a style="text-decoration:none; color:black" href="">
         <span>
             Spotify
         </span>
@@ -11,7 +11,7 @@
     <!--Soundcloud-->
     <div class="containers">
         <img class="image" src="https://toppng.com/uploads/preview/soundcloud-logo-11550711745psbo4fydvd.png">
-        <a style="text-decoration:none; color:black;" href="https://soundcloud.com/wearehooders/furious">
+        <a style="text-decoration:none; color:black;" href="">
         <span>
             Soundcloud
         </span>
