--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 /*change background here by replacing background image url*/
+
 html{
     display: relative;
-    background-image: url(https://fanpad.thoughtcubeit.com/assets/images/mobile-bg.png);
+    background-image: url(https://fanpad.xyz/img/bg.png);
     background-repeat: no-repeat !important;
     background-size: cover;
     background-position: center;
@@ -25,4 +26,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .mat-button {
     background-color: lightgray;
+}
+
+
+
+/*Desktop CSS*/
+@media (min-width: 767px) {
 }
