--- a/src/app/tracklist-template/tracklist-template.component.html
+++ b/src/app/tracklist-template/tracklist-template.component.html
@@ -21,7 +21,9 @@
     <div class="embed">
        
     </div>
-    <div class="button-container">
+    <!--icons-->
+    <!--Commented Out because Artist Editability no longer needed:
+     <div class="button-container">
         <button mat-icon-button color="primary" aria-label="add button for input" (click)="openArtistEntry()">
             <mat-icon>add_box</mat-icon>
         </button>
@@ -32,6 +34,9 @@
             <mat-icon>insert_photo</mat-icon>
         </button>
     </div>
+    -->
+    
+   
     </div>
 
 <!--header information-->
@@ -40,6 +45,7 @@
         <div class="gridcell-1">
         </div>
         <div class="gridcell-2">
+
         </div>
         <div>
             <div class="headerTitles">Title/Artist</div>
