--- a/src/app/tracklist-template/tracklist-template.component.html
+++ b/src/app/tracklist-template/tracklist-template.component.html
@@ -4,7 +4,7 @@
         1) playlist image 2) artist name 3) playlist name -->
     <div class="title">
         <figure class="hover-img">
-            <img class="playlist-image" src="">
+            <img class="playlist-image" src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Unknown_person.jpg">
             <figcaption>
               <h3>EDIT <br/>IMAGE</h3>
             </figcaption>
@@ -13,8 +13,8 @@
             
         </div>
         <div class="info">
-            <span contenteditable="true">{{template.artist}}</span>
             <span contenteditable="true">{{template.playlist}}</span>
+            <span contenteditable="true">{{template.artist}}</span>
         </div>
       
     </div>
@@ -48,7 +48,7 @@
 
         </div>
         <div>
-            <div class="headerTitles">Title/Artist</div>
+            <div style="min-width: 80px;" class="headerTitles">Title/Artist</div>
     
         </div>
         <div>
