--- a/src/app/tracklist-template/tracklist-template.component.scss
+++ b/src/app/tracklist-template/tracklist-template.component.scss
@@ -15,7 +15,7 @@
 }
 .headerTitles {
     color: white;
-    font-size: 12px;
+    font-size: 14px;
     font-weight: 100px;
     text-align: center;
 }
@@ -198,9 +198,15 @@ iframe{
       margin-right: 20px;
       border-color: #000000;
       color:white;
-      font-size: medium;
 
   }
+
+  .headerTitles {
+    color: white;
+    font-size: 18px;
+    font-weight: 100px;
+    text-align: center;
+}
   .gridcell-1{
     display: grid;
   }
