--- a/src/app/song-rows/song-rows.component.html
+++ b/src/app/song-rows/song-rows.component.html
@@ -39,9 +39,9 @@
                 <div class="mobile-bottomsheet">
                     <app-bottomsheet></app-bottomsheet>
                 </div>
-               <div class="desktop-popup">
-                <button mat-icon-button aria-label="other links" (click)="openDialogLinks()" style="width:100%">
-                    <mat-icon>open_in_new</mat-icon>
+               <div class="notify-container">
+                <button id="listen-button" style="background-color: rgba(51, 90, 196, 0.531); color: white;" mat-raised-button (click)="openDialogLinks()">
+                    Listen Now
                 </button>
                </div>
             </div>
@@ -94,7 +94,7 @@
                 <div class="mobile-bottomsheet">
                     <app-bottomsheet></app-bottomsheet>
                 </div>
-               <div class="desktop-popup">
+               <div class="notify-container">
                 <button mat-icon-button aria-label="other links" (click)="openDialogLinks()">
                     <mat-icon>open_in_new</mat-icon>
                 </button>
