--- a/src/styles.css
+++ b/src/styles.css
@@ -26,3 +26,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-button {
     background-color: lightgray;
 }
+
+
+
+/*Desktop CSS*/
+@media (min-width: 767px) {
+}
