fixed listening button

--- a/src/app/bottomsheet/bottomsheet.component.html
+++ b/src/app/bottomsheet/bottomsheet.component.html
@@ -1,5 +1,5 @@
 <div>
-    <button mat-icon-button aria-label="other links" (click)="onTriggerSheetClick()">
-        <mat-icon>open_in_new</mat-icon>
+    <button id="listen-button" style="background-color: rgba(51, 90, 196, 0.531); color: white;" mat-raised-button (click)="onTriggerSheetClick()">
+        Listen Now
     </button>
 </div>
