--- a/src/app/song-rows/song-rows.component.html
+++ b/src/app/song-rows/song-rows.component.html
@@ -94,6 +94,11 @@
                 <div class="mobile-bottomsheet">
                     <app-bottomsheet></app-bottomsheet>
                 </div>
+                <div class="notify-container">
+                <button id="listen-button" style="background-color: rgba(51, 90, 196, 0.531); color: white;" mat-raised-button (click)="openDialogLinks()">
+                    Listen Now
+                </button>
+               </div>
             </div>
             <div *ngIf=!song.status class="notify-container">
                 <button id="notifyme-button" style="background-color: rgba(128, 128, 128, 0.365); color: white;" mat-raised-button (click)="openDialog()">
