--- a/src/app/tracklist-template/tracklist-template.component.html
+++ b/src/app/tracklist-template/tracklist-template.component.html
@@ -3,18 +3,13 @@
         <!--Title: should include the 
         1) playlist image 2) artist name 3) playlist name -->
     <div class="title">
-        <figure class="hover-img">
             <img class="playlist-image" src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Unknown_person.jpg">
-            <figcaption>
-              <h3>EDIT <br/>IMAGE</h3>
-            </figcaption>
-          </figure>
         <div class="playlist-image-container">
             
         </div>
         <div class="info">
-            <span contenteditable="true">{{template.playlist}}</span>
-            <span contenteditable="true">{{template.artist}}</span>
+            <span>{{template.playlist}}</span>
+            <span>{{template.artist}}</span>
         </div>
       
     </div>
