remove unneeded code

--- a/src/app/links/links.component.html
+++ b/src/app/links/links.component.html
@@ -1,4 +1,4 @@
-
+<!--The links below are placeholders replace with other links-->
 <!--Spotify-->
 <div class="containers">
     <img class="image" src="https://www.freepnglogos.com/uploads/spotify-logo-png/spotify-download-logo-30.png">
@@ -10,6 +10,7 @@
 </div>
 
 <!--Soundcloud-->
+
 <div class="containers">
     <img class="image" src="https://toppng.com/uploads/preview/soundcloud-logo-11550711745psbo4fydvd.png">
     <a style="text-decoration:none; color:black;" href="https://soundcloud.com/wearehooders/furious">
